cabal-version:      3.0
name:               my-tools
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             EarlPitts
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: 
        Zipper
      , Grid
      , AoC.Utils
    build-depends:
        base ^>=4.19.2.0
      , comonad
      , parsec
    hs-source-dirs:   src
    default-extensions: DeriveFunctor
    default-language: Haskell2010
--
-- test-suite my-tools-test
--     import:           warnings
--     default-language: Haskell2010
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          Main.hs
--     build-depends:
--         base ^>=4.19.2.0
--       , my-tools
